--- a/dacha-project/index.html
+++ b/dacha-project/index.html
@@ -265,7 +265,7 @@
                         </div>
                         <span class="why__title">Используем древесину камерной сушки</span>
                         <span class="why__text">- это гарантия защиты коробки дома 
-                            от образования грибка и&nbsp;плесени, 
+                            от&nbsp;образования грибка и&nbsp;плесени, 
                             а&nbsp;также возможность правильно 
                             установить утепление.</span>
                     </div>
@@ -315,9 +315,7 @@
             <img loading="lazy" src="./img/niples.png" class="count__niples">
             <div class="container">
                 <div class="count__wrap">
-                    <h2 class="count__title">ХОТИТЕ УЗНАТЬ, <span class="text_orange">СКОЛЬКО БУДЕТ СТОИТЬ</span>
-                        СТРОИТЕЛЬСТВО ДАЧНОГО ДОМА с&nbsp;УЧЕТОМ
-                        ВАШИХ&nbsp;ТРЕБОВАНИЙ и&nbsp;ПОЖЕЛАНИЙ?
+                    <h2 class="count__title">ХОТИТЕ УЗНАТЬ, <span class="text_orange">СКОЛЬКО БУДЕТ СТОИТЬ</span> СТРОИТЕЛЬСТВО ДАЧНОГО ДОМА с&nbsp;УЧЕТОМ ВАШИХ ТРЕБОВАНИЙ и&nbsp;ПОЖЕЛАНИЙ?
                     </h2>
                     <div class="count__body">
                         <span class="count__body-title">Оставьте заявку</span>
@@ -665,7 +663,7 @@
                         </div>
                         <div class="swiper-slide error__item">
                             <span class="error__item-title">Появление вредителей</span>
-                            <p class="error__item-text">В отечественных постройках высок риск появления мышей и&nbsp;насекомых, которые доставят немало проблем в&nbsp;будущем, если изначально сэкономить на&nbsp;защите жилья от них. </p>
+                            <p class="error__item-text">В отечественных постройках высок риск появления мышей и&nbsp;насекомых, которые доставят немало проблем в&nbsp;будущем, если&nbsp;изначально сэкономить на&nbsp;защите жилья от&nbsp;них. </p>
                             <p class="error__item-text">Поэтому мы устанавливаем защитную сетку под полами и&nbsp;на&nbsp;вентиляционном зазоре под обшивку с&nbsp;улицы, а&nbsp;древесину обрабатываем средствами против личинок насекомых-вредителей, чтобы исключить их появление.</p>
                         </div>
                     </div>
@@ -734,7 +732,7 @@
                         <div class="compare__head">
                             <img loading="lazy" src="./img/icons/check.svg" alt="" class="compare__icon">
                             <span class="compare__title">Наше предложение – каркасный дом</span>
-                            <p class="compare__text">В отличие от дома из&nbsp;бруса, каркасный дом обладает рядом преимуществ:</p>
+                            <p class="compare__text">В отличие от&nbsp;дома из&nbsp;бруса, каркасный дом обладает рядом преимуществ:</p>
                         </div>
                         <div class="compare__item">
                             <img loading="lazy" src="./img/compare_6.png" alt="" class="compare__item-img">
@@ -746,7 +744,7 @@
                             <img loading="lazy" src="./img/compare_7.png" alt="" class="compare__item-img">
                             <div class="compare__item-body">
                                 <p class="compare__item-text"><b>Трещины исключены.</b> Внешняя и&nbsp;внутренняя отделка стен выполняется из&nbsp;имитации бруса (толщина 20мм) камерной сушки, поэтому на&nbsp;ней никогда не появятся гигантские трещины.</p>
-                                <p class="compare__item-text">В отличие от бруса, который выпиливается из&nbsp;середины дерева (самая мягкая часть дерева), имитация бруса выпиливается из&nbsp;внешнего слоя дерева (самая твердаячасть дерева), что положительно сказывается  на&nbsp;стабильности этого материала.</p>
+                                <p class="compare__item-text">В отличие от&nbsp;бруса, который выпиливается из&nbsp;середины дерева (самая мягкая часть дерева), имитация бруса выпиливается из&nbsp;внешнего слоя дерева (самая твердаячасть дерева), что положительно сказывается  на&nbsp;стабильности этого материала.</p>
                             </div>
                         </div>
                         <div class="compare__item">
@@ -782,18 +780,18 @@
                         <img loading="lazy" class="advantage__img" src="./img/advantage_1.png" alt="">
                         <span class="advantage__title text_orange">Экономия на&nbsp;оплате коммунальных услуг</span>
                         <p class="advantage__text">Небольшой дом бережет электроэнергию и&nbsp;не требует внушительных затрат на&nbsp;отопление зимой. Дом 50 м2 «съедает» за&nbsp;отопление в&nbsp;2 – 3 раза меньше, чем дом на&nbsp;150 «квадратов».</p>
-                        <p class="advantage__text">Так же не будем забывать, где строим дом: СНТ или&nbsp;ИЖС – участки. Если дом планируем отапливать электронергией учитывайте сколько выделено КВ на&nbsp;ваш участок.  Если вам дали 5 Кв… как отапливать дом и&nbsp;пользоваться бытовой техникой и&nbsp;прочими эл.приборами!??...</p>
+                        <p class="advantage__text">Так же не будем забывать, где строим дом: СНТ или&nbsp;ИЖС – участки. если&nbsp;дом планируем отапливать электронергией учитывайте сколько выделено КВ на&nbsp;ваш участок.  если&nbsp;вам дали 5 Кв… как отапливать дом и&nbsp;пользоваться бытовой техникой и&nbsp;прочими эл.приборами!??...</p>
                     </div>
                     <div class="advantage">
                         <img loading="lazy" class="advantage__img" src="./img/advantage_2.png" alt="">
                         <span class="advantage__title text_orange">Удобство эксплуатации</span>
-                        <p class="advantage__text">Дома в&nbsp;несколько этажей или&nbsp;с&nbsp;мансардой вынуждают постоянно подниматься поступенькам вверх-вниз. Это очень утомляет и&nbsp;негативно сказывается на&nbsp;здоровье суставов, особенно если речь идет о&nbsp;пожилых людях.</p>
+                        <p class="advantage__text">Дома в&nbsp;несколько этажей или&nbsp;с&nbsp;мансардой вынуждают постоянно подниматься поступенькам вверх-вниз. Это очень утомляет и&nbsp;негативно сказывается на&nbsp;здоровье суставов, особенно если&nbsp;речь идет о&nbsp;пожилых людях.</p>
                         <p class="advantage__text">Также нередки случаи, когда дети или&nbsp;домашние животные падают с&nbsp;лестниц и&nbsp;в&nbsp;результате получают серьезные травмы. в&nbsp;этом несомненное преимущество домов в&nbsp;1 этаж без мансарды – в&nbsp;них исключены подобные риски.</p>
                     </div>
                     <div class="advantage">
                         <img loading="lazy" class="advantage__img" src="./img/advantage_3.png" alt="">
                         <span class="advantage__title text_orange">Комфортный климат</span>
-                        <p class="advantage__text">Тепло равномерно распределяется по&nbsp;одноэтажному дому, в&nbsp;отличие от дома в&nbsp;несколько этажей, внутри которого весь теплый воздух поднимается вверх. Более того, небольшой дом можно отопить с&nbsp;помощью металлической печки и&nbsp;электрического конвектора, тепловентилятора. за&nbsp;счет маленькой площади дом отапливается очень быстро.</p>
+                        <p class="advantage__text">Тепло равномерно распределяется по&nbsp;одноэтажному дому, в&nbsp;отличие от&nbsp;дома в&nbsp;несколько этажей, внутри которого весь теплый воздух поднимается вверх. Более того, небольшой дом можно отопить с&nbsp;помощью металлической печки и&nbsp;электрического конвектора, тепловентилятора. за&nbsp;счет маленькой площади дом отапливается очень быстро.</p>
                     </div>
                     <div class="advantage">
                         <img loading="lazy" class="advantage__img" src="./img/advantage_4.png" alt="">
@@ -808,7 +806,7 @@
                     <div class="advantage">
                         <img loading="lazy" class="advantage__img" src="./img/advantage_6.png" alt="">
                         <span class="advantage__title text_orange">Низкая стоимость постройки</span>
-                        <p class="advantage__text">Построить дом площадью 80 м2 стоит почти в&nbsp;2 раза дешевле, чем дом на&nbsp;150 м2. Если вы не собираетесь использовать дачный дом для круглогодичного проживания и&nbsp;в&nbsp;вашей семье не более 5 – 6 человек, строить дом большой площади – пустая трата денег. </p>
+                        <p class="advantage__text">Построить дом площадью 80 м2 стоит почти в&nbsp;2 раза дешевле, чем дом на&nbsp;150 м2. если&nbsp;вы не собираетесь использовать дачный дом для круглогодичного проживания и&nbsp;в&nbsp;вашей семье не более 5 – 6 человек, строить дом большой площади – пустая трата денег. </p>
                         <p class="advantage__text">Именно поэтому мы предлагаем и&nbsp;рекомендуем строить каркасные дачные домики площадью не более 100 м2.</p>
                     </div>
                 </div>
@@ -828,8 +826,8 @@
                         <p class="benefit__text">Благодаря партнерским отношениям с&nbsp;поставщиками материалов, все материалы закупаются в&nbsp;СПб по&nbsp;ценам ниже рыночных</p>
                     </div>
                     <div class="benefit">
-                        <span class="benefit__title">Стоимость услуг не превышает 40% от материала</span>
-                        <p class="benefit__text">Наши услуги, включая разработку архитектурного и&nbsp;конструкторского решения,доставку материала и&nbsp;работу бригады составляют 40% от цены материалов</p>
+                        <span class="benefit__title">Стоимость услуг не превышает 40% от&nbsp;материала</span>
+                        <p class="benefit__text">Наши услуги, включая разработку архитектурного и&nbsp;конструкторского решения,доставку материала и&nbsp;работу бригады составляют 40% от&nbsp;цены материалов</p>
                     </div>
                     <div class="benefit">
                         <span class="benefit__title">Прозрачность работы</span>
@@ -951,7 +949,7 @@
                                     <div class="house__card-col">
                                         <span class="house__item">обвязка 1 (брус 150x150мм)</span>
                                         <span class="house__item">обвязка 2 (брус 150x100мм)</span>
-                                        <span class="house__item">сетка от грызунов</span>
+                                        <span class="house__item">сетка от&nbsp;грызунов</span>
                                         <span class="house__item">черн. пол (доска 100х20мм)</span>
                                         <span class="house__item">лаги (доска 150x50мм)</span>
                                     </div>
@@ -1005,7 +1003,7 @@
                                 <div class="house__card-body fdr">
                                     <div class="house__card-col">
                                         <span class="house__item">отделка ул. (имитац. бруса)</span>
-                                        <span class="house__item">сетка от грызунов</span>
+                                        <span class="house__item">сетка от&nbsp;грызунов</span>
                                         <span class="house__item">контррейка (50х20мм)</span>
                                         <span class="house__item">ветрозащита</span>
                                         <span class="house__item">каркас (доска 100х50мм)</span>
@@ -1040,7 +1038,7 @@
                                 <div class="house__card-body fdr">
                                     <div class="house__card-col">
                                         <span class="house__item">отделка ул. (имитац. бруса)</span>
-                                        <span class="house__item">сетка от грызунов</span>
+                                        <span class="house__item">сетка от&nbsp;грызунов</span>
                                         <span class="house__item">контррейка (50х20мм)</span>
                                         <span class="house__item">ветрозащита</span>
                                         <span class="house__item">каркас (доска 150х50мм)</span>
@@ -1059,7 +1057,7 @@
                                     <div class="house__card-col">
                                         <span class="house__item">обвязка (доска 200*50мм)</span>
                                         <span class="house__item">цоколь (доска 200*50мм)</span>
-                                        <span class="house__item">сетка от грызунов</span>
+                                        <span class="house__item">сетка от&nbsp;грызунов</span>
                                         <span class="house__item">черн. пол (доска 100х20мм)</span>
                                         <span class="house__item">лаги (доска 200x50мм)</span>
                                     </div>
@@ -1483,7 +1481,7 @@
                     <p class="notype__bold">Так повелось, все мы хотим <span class="text_orange">индивидуальный</span> дом, непохожий на&nbsp;чей–либо. Да и&nbsp;все предусмотреть в&nbsp;проекте крайне сложно, но возможно!</p>
                     <div class="notype__card">
                         <p class="notype__text">Каталог проектов может быть <b>внушительного размера</b>, а&nbsp;если включить в&nbsp;него все проекты, разработанные индивидуально под потребности заказчика – будет еще больше! </p>
-                        <p class="notype__text">Так зачем выбирать типовой проект дома, если в&nbsp;70% случаев он все равно подвергается изменениям и&nbsp;доработкам в&nbsp;процессе?</p>
+                        <p class="notype__text">Так зачем выбирать типовой проект дома, если&nbsp;в&nbsp;70% случаев он все равно подвергается изменениям и&nbsp;доработкам в&nbsp;процессе?</p>
                         <p class="notype__text"><b>Я спроектирую для вас дачный дом индивидуально,</b> с&nbsp;учетом всех ваших требований и&nbsp;пожеланий, а&nbsp;после – реализую уникальный проект в&nbsp;жизнь.</p>
                     </div>
                     <button class="button button_notype js-toggle-discuss-popup">обсудить проект дачного дома</button>
@@ -1503,7 +1501,7 @@
                         <img loading="lazy" src="./img/how_2.png" alt="Изображение" class="how__img">
                         <span class="how__title">Определяем ваши 
                             предпочтения</span>
-                        <span class="how__text">Вы выбираете проект из&nbsp;каталога или&nbsp;присылаете эскиз – от руки или&nbsp;с&nbsp;интернета</span>
+                        <span class="how__text">Вы выбираете проект из&nbsp;каталога или&nbsp;присылаете эскиз – от&nbsp;руки или&nbsp;с&nbsp;интернета</span>
                     </div>
                     <div class="how__item">
                         <img loading="lazy" src="./img/how_3.png" alt="Изображение" class="how__img">
@@ -1529,7 +1527,7 @@
                     <div class="how__item">
                         <img loading="lazy" src="./img/how_7.png" alt="Изображение" class="how__img">
                         <span class="how__title">Корректируем проект</span>
-                        <span class="how__text">Вносим коррективы в&nbsp;проект и&nbsp;смету, если это необходимо</span>
+                        <span class="how__text">Вносим коррективы в&nbsp;проект и&nbsp;смету, если&nbsp;это необходимо</span>
                     </div>
                     <div class="how__item">
                         <img loading="lazy" src="./img/how_8.png" alt="Изображение" class="how__img">
@@ -1540,7 +1538,7 @@
                         <img loading="lazy" src="./img/how_9.png" alt="Изображение" class="how__img">
                         <span class="how__title">Доставка материалов 
                             и&nbsp;оплата 70%</span>
-                        <span class="how__text">Мы завозим материалы на&nbsp;участок, и&nbsp;вы оплачиваете 70% от суммы проекта</span>
+                        <span class="how__text">Мы завозим материалы на&nbsp;участок, и&nbsp;вы оплачиваете 70% от&nbsp;суммы проекта</span>
                     </div>
                     <div class="how__item">
                         <img loading="lazy" src="./img/how_10.png" alt="Изображение" class="how__img">
@@ -1568,7 +1566,8 @@
         <section id="questions" class="questions">
             <img loading="lazy" src="./img/questions_bg.jpg" alt="Фон" class="questions__bg">
             <div class="container">
-                <h2 class="section__title text_tac no-adaptiv">Остались <span class="text_orange">вопросы?</span></h2>
+                <div class="questions__container">
+                    <h2 class="section__title text_tac no-adaptiv">Остались <span class="text_orange">вопросы?</span></h2>
                 <img loading="lazy" src="./img/questions_oleg.png" alt="Фон" class="questions__oleg">
                 <div class="questions__card">
                     <span class="questions__text">Свяжитесь с&nbsp;нами любым удобным способом:</span>
@@ -1632,6 +1631,7 @@
                     </div>
                 </div>
                 <button class="button button_notype js-toggle-q_popup" data-place="question">ЗАДАТЬ СВОЙ ВОПРОС</button>
+                </div>
             </div>
         </section>
     </main>
