--- a/dacha-project/index.html
+++ b/dacha-project/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/favicon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./css/swiper-bundle.min.css">
     <link rel="stylesheet" href="./css/fonts.css">
     <link rel="stylesheet" href="./css/style.css">
@@ -321,7 +321,7 @@
                         <span class="count__body-title">Оставьте заявку</span>
                         <span class="count__text">Мы разработаем для вас индивидуальный 
                             проект АР + КР, а&nbsp;также составим смету! 
-                            Да, и&nbsp;построим конечно же)</span>
+                            Да, и&nbsp;построим конечно&nbsp;же)</span>
                         <form onsubmit="ym(67488328,'reachGoal','project')" class="count__form">
                             <input type="text" name="user_name" class="count__input" placeholder="Введите ваше имя">
                             <input type="tel" name="user_tel" class="count__input" placeholder="Введите номер телефона" required>
@@ -627,6 +627,7 @@
         </section>
         <section class="error">
             <img loading="lazy" src="./img/error_bg.jpg" class="error__bg">
+            <img loading="lazy" src="./img/error_bg-m.jpg" class="error__bg-m">
             <div class="container">
                 <h2 class="section__title text_ttu">ХОТИТЕ ЗАКАЗАТЬ СТРОИТЕЛЬСТВО ДОМА <span class="text_orange">ЕЩЕ ДЕШЕВЛЕ?</span></h2>
                 <p class="error__subtitle">– Хорошо, я наглядно покажу, как можно построить дом дешевле, применяя
@@ -637,7 +638,7 @@
                     <span class="error__item-title">Гниение силового каркаса дома</span>
                     <p class="error__item-text">Используя сырую древесину, каркас дома довольно быстро начнет гнить и&nbsp;рассыхаться. в&nbsp;результаты стены не получится утеплить, так как поверх утеплителя устанавливается пленка, а&nbsp;высокая влажность приведет к&nbsp;сбору влаги под ней. в&nbsp;процессе усушки запилы деталей рассохнутся, а&nbsp;между стойками образуются щели, из-за чего конструкция станет «хлипкой».</p>
                     <p class="error__item-text">Более того, на&nbsp;сырой доске не избежать появления синевы и&nbsp;грибка. Особенно актуально это для Ленинградской области с&nbsp;нестабильным климатом и&nbsp;обильными осадками. </p>
-                    <p class="error__item-text">Мы же используем исключительно древесину камерной сушки, которая НЕ гниет и&nbsp;НЕ рассыхается даже через десятки лет.</p>
+                    <p class="error__item-text">Мы&nbsp;же используем исключительно древесину камерной сушки, которая НЕ гниет и&nbsp;НЕ рассыхается даже через десятки лет.</p>
                 </div>
                 <div class="error__container" data-mobile="false">
                     <div class="swiper-wrapper">
@@ -750,7 +751,7 @@
                         <div class="compare__item">
                             <img loading="lazy" src="./img/compare_8.png" alt="" class="compare__item-img">
                             <div class="compare__item-body">
-                                <p class="compare__item-text"><b>Заселяться можно сразу же!</b> После строительства каркасного дома отсутствует усадка, поэтому выполнять внутреннюю отделку стен и&nbsp;заселяться в&nbsp;него можно сразу же после строительства.</p>
+                                <p class="compare__item-text"><b>Заселяться можно сразу&nbsp;же!</b> После строительства каркасного дома отсутствует усадка, поэтому выполнять внутреннюю отделку стен и&nbsp;заселяться в&nbsp;него можно сразу&nbsp;же после строительства.</p>
                             </div>
                         </div>
                         <div class="compare__item">
@@ -780,7 +781,7 @@
                         <img loading="lazy" class="advantage__img" src="./img/advantage_1.png" alt="">
                         <span class="advantage__title text_orange">Экономия на&nbsp;оплате коммунальных услуг</span>
                         <p class="advantage__text">Небольшой дом бережет электроэнергию и&nbsp;не требует внушительных затрат на&nbsp;отопление зимой. Дом 50 м2 «съедает» за&nbsp;отопление в&nbsp;2 – 3 раза меньше, чем дом на&nbsp;150 «квадратов».</p>
-                        <p class="advantage__text">Так же не будем забывать, где строим дом: СНТ или&nbsp;ИЖС – участки. если&nbsp;дом планируем отапливать электронергией учитывайте сколько выделено КВ на&nbsp;ваш участок.  если&nbsp;вам дали 5 Кв… как отапливать дом и&nbsp;пользоваться бытовой техникой и&nbsp;прочими эл.приборами!??...</p>
+                        <p class="advantage__text">Так&nbsp;же не будем забывать, где строим дом: СНТ или&nbsp;ИЖС – участки. если&nbsp;дом планируем отапливать электронергией учитывайте сколько выделено КВ на&nbsp;ваш участок.  если&nbsp;вам дали 5 Кв… как отапливать дом и&nbsp;пользоваться бытовой техникой и&nbsp;прочими эл.приборами!??...</p>
                     </div>
                     <div class="advantage">
                         <img loading="lazy" class="advantage__img" src="./img/advantage_2.png" alt="">
@@ -1605,7 +1606,7 @@
                 <div class="questions__socials">
                     <div class="questions__social">
                         <span class="questions__title">Посетите нашу группу Вконтакте</span>
-                        <a href="#" class="questions__link">
+                        <a href="https://vk.com/dacha.dom_bani_iz_brusa_karkasa" class="questions__link" target="_blank">
                             <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24">
                                 <path d="m19.915 13.028c-.388-.49-.277-.708 0-1.146.005-.005 3.208-4.431 3.538-5.932l.002-.001c.164-.547 0-.949-.793-.949h-2.624c-.668 0-.976.345-1.141.731 0 0-1.336 3.198-3.226 5.271-.61.599-.892.791-1.225.791-.164 0-.419-.192-.419-.739v-5.105c0-.656-.187-.949-.74-.949h-4.126c-.419 0-.668.306-.668.591 0 .622.945.765 1.043 2.515v3.797c0 .832-.151.985-.486.985-.892 0-3.057-3.211-4.34-6.886-.259-.713-.512-1.001-1.185-1.001h-2.625c-.749 0-.9.345-.9.731 0 .682.892 4.073 4.148 8.553 2.17 3.058 5.226 4.715 8.006 4.715 1.671 0 1.875-.368 1.875-1.001 0-2.922-.151-3.198.686-3.198.388 0 1.056.192 2.616 1.667 1.783 1.749 2.076 2.532 3.074 2.532h2.624c.748 0 1.127-.368.909-1.094-.499-1.527-3.871-4.668-4.023-4.878z" fill="#FFFFFF"/>
                             </svg>
@@ -1613,7 +1614,7 @@
                     </div>
                     <div class="questions__social">
                         <span class="questions__title">Подпишитесь на&nbsp;YouTube-канал «Дачный дом своими руками»</span>
-                        <a href="#" class="questions__link">
+                        <a href="https://www.youtube.com/channel/UC4kxD--XpRYQb6aWQMhMuEQ" class="questions__link" target="_blank">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="-21 -117 682.66672 682">
                                 <path d="m626.8125 64.035156c-7.375-27.417968-28.992188-49.03125-56.40625-56.414062-50.082031-13.703125-250.414062-13.703125-250.414062-13.703125s-200.324219 0-250.40625 13.183593c-26.886719 7.375-49.03125 29.519532-56.40625 56.933594-13.179688 50.078125-13.179688 153.933594-13.179688 153.933594s0 104.378906 13.179688 153.933594c7.382812 27.414062 28.992187 49.027344 56.410156 56.410156 50.605468 13.707031 250.410156 13.707031 250.410156 13.707031s200.324219 0 250.40625-13.183593c27.417969-7.378907 49.03125-28.992188 56.414062-56.40625 13.175782-50.082032 13.175782-153.933594 13.175782-153.933594s.527344-104.382813-13.183594-154.460938zm-370.601562 249.878906v-191.890624l166.585937 95.945312zm0 0" fill="#FFFFFF"/>
                             </svg>
@@ -1621,7 +1622,7 @@
                     </div>
                     <div class="questions__social">
                         <span class="questions__title">Посетите мой профиль в&nbsp;Инстаграме:</span>
-                        <a href="#" class="questions__link">
+                        <a href="https://www.instagram.com/proekt_dacha_spb/" class="questions__link" target="_blank">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 511 511.9">
                                 <path d="m510.949219 150.5c-1.199219-27.199219-5.597657-45.898438-11.898438-62.101562-6.5-17.199219-16.5-32.597657-29.601562-45.398438-12.800781-13-28.300781-23.101562-45.300781-29.5-16.296876-6.300781-34.898438-10.699219-62.097657-11.898438-27.402343-1.300781-36.101562-1.601562-105.601562-1.601562s-78.199219.300781-105.5 1.5c-27.199219 1.199219-45.898438 5.601562-62.097657 11.898438-17.203124 6.5-32.601562 16.5-45.402343 29.601562-13 12.800781-23.097657 28.300781-29.5 45.300781-6.300781 16.300781-10.699219 34.898438-11.898438 62.097657-1.300781 27.402343-1.601562 36.101562-1.601562 105.601562s.300781 78.199219 1.5 105.5c1.199219 27.199219 5.601562 45.898438 11.902343 62.101562 6.5 17.199219 16.597657 32.597657 29.597657 45.398438 12.800781 13 28.300781 23.101562 45.300781 29.5 16.300781 6.300781 34.898438 10.699219 62.101562 11.898438 27.296876 1.203124 36 1.5 105.5 1.5s78.199219-.296876 105.5-1.5c27.199219-1.199219 45.898438-5.597657 62.097657-11.898438 34.402343-13.300781 61.601562-40.5 74.902343-74.898438 6.296876-16.300781 10.699219-34.902343 11.898438-62.101562 1.199219-27.300781 1.5-36 1.5-105.5s-.101562-78.199219-1.300781-105.5zm-46.097657 209c-1.101562 25-5.300781 38.5-8.800781 47.5-8.601562 22.300781-26.300781 40-48.601562 48.601562-9 3.5-22.597657 7.699219-47.5 8.796876-27 1.203124-35.097657 1.5-103.398438 1.5s-76.5-.296876-103.402343-1.5c-25-1.097657-38.5-5.296876-47.5-8.796876-11.097657-4.101562-21.199219-10.601562-29.398438-19.101562-8.5-8.300781-15-18.300781-19.101562-29.398438-3.5-9-7.699219-22.601562-8.796876-47.5-1.203124-27-1.5-35.101562-1.5-103.402343s.296876-76.5 1.5-103.398438c1.097657-25 5.296876-38.5 8.796876-47.5 4.101562-11.101562 10.601562-21.199219 19.203124-29.402343 8.296876-8.5 18.296876-15 29.398438-19.097657 9-3.5 22.601562-7.699219 47.5-8.800781 27-1.199219 35.101562-1.5 103.398438-1.5 68.402343 0 76.5.300781 103.402343 1.5 25 1.101562 38.5 5.300781 47.5 8.800781 11.097657 4.097657 21.199219 10.597657 29.398438 19.097657 8.5 8.300781 15 18.300781 19.101562 29.402343 3.5 9 7.699219 22.597657 8.800781 47.5 1.199219 27 1.5 35.097657 1.5 103.398438s-.300781 76.300781-1.5 103.300781zm0 0" fill="#ffffff"/>
                                 <path d="m256.449219 124.5c-72.597657 0-131.5 58.898438-131.5 131.5s58.902343 131.5 131.5 131.5c72.601562 0 131.5-58.898438 131.5-131.5s-58.898438-131.5-131.5-131.5zm0 216.800781c-47.097657 0-85.300781-38.199219-85.300781-85.300781s38.203124-85.300781 85.300781-85.300781c47.101562 0 85.300781 38.199219 85.300781 85.300781s-38.199219 85.300781-85.300781 85.300781zm0 0" fill="#ffffff"/>
