--- a/dacha-project/index.html
+++ b/dacha-project/index.html
@@ -1211,7 +1211,7 @@
                             </div>
                             <div class="quiz__page">
                                 <span class="quiz__question">Где находится ваш участок?</span>
-                                <div class="quiz__options">
+                                <div class="quiz__options quiz__options_text">
                                     <label class="quiz__label quiz__label_text">
                                         <input type="text" name="city" placeholder="Введите ваш город /поселок">
                                     </label>
