fixes fixes fixes

--- a/dacha-project/index.html
+++ b/dacha-project/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./img/favicon.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/favicons.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/swiper-bundle.min.css">
     <link rel="stylesheet" href="./css/fonts.css">
     <link rel="stylesheet" href="./css/style.css">
@@ -326,7 +326,7 @@
                             <input type="text" name="user_name" class="count__input" placeholder="Введите ваше имя">
                             <input type="tel" name="user_tel" class="count__input" placeholder="Введите номер телефона" required>
                             <button class="button button_count">ПОЛУЧИТЬ ПРОЕКТ и&nbsp;РАСЧЕТ СТОИМОСТИ</button>
-                            <span class="count__agreement">Нажимая на&nbsp;кнопку, вы соглашаетесь с&nbsp;<a href="./policy.pdf" target="_blank">политикой конфиденциальности</a></span>
+                            <span class="count__agreement">Нажимая на&nbsp;кнопку, вы соглашаетесь с&nbsp;<a href="./pdf/policy.pdf" target="_blank">политикой конфиденциальности</a></span>
                         </form>
                     </div>
                 </div>
@@ -1694,7 +1694,7 @@
                 </div>
                 <div class="footer__col">
                     <button class="button button_portfolio js-toggle-popup" data-place="footer">заказать звонок</button>
-                    <a href="./policy.pdf" target="_blank" class="footer__text">Политика конфиденциальности</a>
+                    <a href="./pdf/policy.pdf" target="_blank" class="footer__text">Политика конфиденциальности</a>
                     <a href="https://vk.com/r_faizullin" target="_blank" class="footer__text">Разработчик</a>
                 </div>
             </div>
@@ -1709,7 +1709,7 @@
                 <input type="tel" name="user_tel" class="count__input" placeholder="Введите номер телефона" required>
                 <input type="hidden" class="count__vidden js-hidden-input" value="">
                 <button type="submit" class="button button_count">Заказать звонок</button>
-                <span class="count__agreement">Нажимая на&nbsp;кнопку, вы соглашаетесь с&nbsp;<a href="./policy.pdf" target="_blank">политикой конфиденциальности</a></span>
+                <span class="count__agreement">Нажимая на&nbsp;кнопку, вы соглашаетесь с&nbsp;<a href="./pdf/policy.pdf" target="_blank">политикой конфиденциальности</a></span>
             </form>
         </div>
     </div>
@@ -1722,7 +1722,7 @@
                 <input type="tel" class="count__input" name="user_tel" placeholder="Введите номер телефона" required>
                 <input type="hidden" name="hidden_val" class="count__vidden js-hidden-input" value="">
                 <button type="submit" class="button button_count">Скачать проект</button>
-                <span class="count__agreement">Нажимая на&nbsp;кнопку, вы соглашаетесь с&nbsp;<a href="./policy.pdf" target="_blank">политикой конфиденциальности</a></span>
+                <span class="count__agreement">Нажимая на&nbsp;кнопку, вы соглашаетесь с&nbsp;<a href="./pdf/policy.pdf" target="_blank">политикой конфиденциальности</a></span>
             </form>
         </div>
     </div>
@@ -1735,7 +1735,7 @@
                 <input name="user_tel" type="tel" class="count__input" placeholder="Введите номер телефона" required>
                 <textarea name="user_question" rows="3" type="text" class="count__input" placeholder="Ваш вопрос"></textarea>
                 <button type="submit" class="button button_count">Задать вопрос</button>
-                <span class="count__agreement">Нажимая на&nbsp;кнопку, вы соглашаетесь с&nbsp;<a href="./policy.pdf" target="_blank">политикой конфиденциальности</a></span>
+                <span class="count__agreement">Нажимая на&nbsp;кнопку, вы соглашаетесь с&nbsp;<a href="./pdf/policy.pdf" target="_blank">политикой конфиденциальности</a></span>
             </form>
         </div>
     </div>
@@ -1762,7 +1762,7 @@
                 <input type="tel" name="user_tel" class="count__input" placeholder="Введите номер телефона" required>
                 <input type="hidden" class="count__vidden js-hidden-input" value="">
                 <button type="submit" class="button button_count">Обсудить проект</button>
-                <span class="count__agreement">Нажимая на&nbsp;кнопку, вы соглашаетесь с&nbsp;<a href="./policy.pdf" target="_blank">политикой конфиденциальности</a></span>
+                <span class="count__agreement">Нажимая на&nbsp;кнопку, вы соглашаетесь с&nbsp;<a href="./pdf/policy.pdf" target="_blank">политикой конфиденциальности</a></span>
             </form>
         </div>
     </div>
@@ -1775,7 +1775,7 @@
                 <input type="tel" name="user_tel" class="count__input" placeholder="Введите номер телефона" required>
                 <input type="hidden" class="count__vidden js-hidden-input" value="">
                 <button type="submit" class="button button_count">Оставить заявку</button>
-                <span class="count__agreement">Нажимая на&nbsp;кнопку, вы соглашаетесь с&nbsp;<a href="./policy.pdf" target="_blank">политикой конфиденциальности</a></span>
+                <span class="count__agreement">Нажимая на&nbsp;кнопку, вы соглашаетесь с&nbsp;<a href="./pdf/policy.pdf" target="_blank">политикой конфиденциальности</a></span>
             </form>
         </div>
     </div>
