--- a/hearth/delivery.html
+++ b/hearth/delivery.html
@@ -56,7 +56,7 @@
                         </span>
                         <span class="header__cart-total">9999 P</span>
                     </button>
-                    <div class="cart js-cart">
+                    <div id="card-dialog" class="cart js-cart">
                         <span class="cart__close js-open-cart"></span>
                         <span class="cart__title">Ваша корзина</span>
                         <a href="#" class="button button_cart">Получить скидку 10%</a>
