--- a/hearth/index.html
+++ b/hearth/index.html
@@ -56,7 +56,7 @@
                         </span>
                         <span class="header__cart-total">9999 P</span>
                     </button>
-                    <div class="cart js-cart">
+                    <div id="card-dialog" class="cart js-cart">
                         <span class="cart__close js-open-cart"></span>
                         <span class="cart__title">Ваша корзина</span>
                         <a href="#" class="button button_cart">Получить скидку 10%</a>
@@ -349,27 +349,27 @@
                             <span class="filter__weight-text">Выберите вес:</span>
                             <div class="filter__weight-labels">
                                 <label class="filter__weight-label">
-                                    <input type="checkbox" name="weight" value="1200">
+                                    <input type="radio" name="weight" value="1200">
                                     <span class="filter__weight-checkbox"></span>
                                     <span class="filter__weight-value">1400 г</span>
                                 </label>
                                 <label class="filter__weight-label">
-                                    <input type="checkbox" name="weight" value="1200">
+                                    <input type="radio" name="weight" value="1200">
                                     <span class="filter__weight-checkbox"></span>
                                     <span class="filter__weight-value">1200 г</span>
                                 </label>
                                 <label class="filter__weight-label">
-                                    <input type="checkbox" name="weight" value="1000">
+                                    <input type="radio" name="weight" value="1000">
                                     <span class="filter__weight-checkbox"></span>
                                     <span class="filter__weight-value">1000 г</span>
                                 </label>
                                 <label class="filter__weight-label">
-                                    <input type="checkbox" name="weight" value="800">
+                                    <input type="radio" name="weight" value="800">
                                     <span class="filter__weight-checkbox"></span>
                                     <span class="filter__weight-value">800 г</span>
                                 </label>
                                 <label class="filter__weight-label">
-                                    <input type="checkbox" name="weight" value="600">
+                                    <input type="radio" name="weight" value="600">
                                     <span class="filter__weight-checkbox"></span>
                                     <span class="filter__weight-value">600 г</span>
                                 </label>
