--- a/dacha-project/index.html
+++ b/dacha-project/index.html
@@ -911,19 +911,20 @@
             </div>
         </section>
         <section class="correct">
+            <img src="./img/leaf.png" alt="Ветка" class="correct__leaf">
             <div class="container">
                 <h2 class="section__title text_ttu text_tac no-adaptiv"><span class="text_orange">Как&nbsp;выглядит</span> «правильный» каркасный дом в&nbsp;разрезе?</h2>
                 <span class="correct__subtitle">Именно такие дачные дома строит наша команда!</span>
                 <div class="house">
-                    <picture loading="lazy" class="house__img">
+                    <picture loading="lazy" class="house__img js-lightbox">
                         <source srcset="./img/100mm.webp" type="image/webp">
-                            <img src="./img/100mm.jpg" alt="Чертеж правильного дома">
+                        <img src="./img/100mm.jpg" alt="Чертеж правильного дома">
                     </picture>
                 </div>
                 <div class="house">
-                    <picture loading="lazy" class="house__img">
+                    <picture loading="lazy" class="house__img js-lightbox">
                         <source srcset="./img/150mm.webp" type="image/webp">
-                            <img src="./img/150mm.jpg" alt="Чертеж правильного дома">
+                        <img src="./img/150mm.jpg" alt="Чертеж правильного дома">
                     </picture>
                 </div>
             </div>
@@ -1583,6 +1584,13 @@
                 <span class="count__agreement">Нажимая на&nbsp;кнопку, вы соглашаетесь с&nbsp;<a href="./pdf/policy.pdf" target="_blank">политикой конфиденциальности</a></span>
             </form>
         </div>
+    </div>
+
+    <div class="lightbox js-lightbox-container">
+        <picture loading="lazy" class="lightbox__img">
+            <source srcset="./img/100mm.webp" type="image/webp">
+            <img src="./img/100mm.jpg" alt="Чертеж правильного дома">
+        </picture>
     </div>
 
     <!-- Yandex.Metrika counter -->
