--- a/hearth/contacts.html
+++ b/hearth/contacts.html
@@ -50,7 +50,7 @@
                             </div>
                         </div>
                     </div>
-                    <button class="header__cart js-open-cart">
+                    <button id="cart_button" class="header__cart js-open-cart">
                         <span class="header__cart-ico">
                             <img src="./img/icons/cart.svg" alt="Иконка корзины">
                             <span class="header__cart-amount">12</span>
