--- a/intel/index.html
+++ b/intel/index.html
@@ -12,6 +12,9 @@
 <body>
     <header class="header">
         <div class="container">
+            <div class="header__intel">
+                <img src="./img/intel_light.png" alt="Логотип Intel">
+            </div>
             <div class="header__wrap">
                 <div class="logo">
                     <img src="./img/ixbt-logo.png" alt="Логотип IXBT" class="logo__img">
@@ -30,6 +33,14 @@
     </header>
     <main class="main">
         <section class="banner">
+            <div class="deco">
+                <div class="deco__small deco_light"></div>
+                <div class="deco__big deco_white"></div>
+            </div>
+            <div class="deco">
+                <div class="deco__small deco_white"></div>
+                <div class="deco__big deco_dark"></div>
+            </div>
             <picture class="banner__bg">
                 <source srcset="./img/banner_bg.webp" type="image/webp">
                 <img src="./img/banner_bg.jpg" alt="Фон">
@@ -79,6 +90,10 @@
             </div>
         </section>
         <section id="tests" class="tests">
+            <div class="deco">
+                <div class="deco__big deco_light"></div>
+                <div class="deco__small deco_white"></div>
+            </div>
             <div class="container">
                 <div class="section__center">
                     <h2 class="section__title"><a href="#" class="tests__title ">Тестирование продукции Intel®</a></h2>
@@ -124,6 +139,10 @@
             </div>
         </section>
         <section class="horizons">
+            <div class="deco">
+                <div class="deco__big deco_grey"></div>
+                <div class="deco__small deco_light"></div>
+            </div>
             <picture class="horizons__bg">
                 <source srcset="./img/horizons_bg.webp" type="image/webp">
                 <img src="./img/horizons_bg.jpg" alt="Фон">
@@ -136,6 +155,10 @@
             </div>
         </section>
         <section id="articles" class="articles">
+            <div class="deco">
+                <div class="deco__big deco_light"></div>
+                <div class="deco__small deco_white"></div>
+            </div>
             <div class="container">
                 <div class="three-col__container">
                     <article class="article">
@@ -186,6 +209,10 @@
             </div>
         </section>
         <section id="products" class="products">
+            <div class="deco">
+                <div class="deco__big deco_light"></div>
+                <div class="deco__small deco_white"></div>
+            </div>
             <div class="container">
                 <div class="products__wrap">
                     <article class="product">
@@ -260,6 +287,18 @@
             </div>
         </section>
         <section id="about" class="about">
+            <div class="deco">
+                <div class="deco__big deco_grey"></div>
+                <div class="deco__small deco_light"></div>
+            </div>
+            <div class="deco">
+                <div class="deco__small deco_grey"></div>
+                <div class="deco__big deco_light"></div>
+            </div>
+            <div class="deco">
+                <div class="deco__big deco_grey"></div>
+                <div class="deco__small deco_light"></div>
+            </div>
             <div class="container">
                 <div class="about__wrap">
                     <article class="about__item">
@@ -304,6 +343,14 @@
         </section>
     </main>
     <footer class="footer">
+        <div class="deco">
+            <div class="deco__small deco_white"></div>
+            <div class="deco__big deco_light"></div>
+        </div>
+        <div class="deco">
+            <div class="deco__big deco_white"></div>
+            <div class="deco__small deco_light"></div>
+        </div>
         <div class="container">
             <div class="footer__wrap">
                 <img class="footer__logo" src="./img/intel_dark.png" alt="Лого Intel">
