--- a/intel/index.html
+++ b/intel/index.html
@@ -41,7 +41,7 @@
                 <div class="deco__small deco_white"></div>
                 <div class="deco__big deco_dark"></div>
             </div>
-            <picture class="banner__bg">
+            <picture loading="lazy" class="banner__bg">
                 <source srcset="./img/banner_bg.webp" type="image/webp">
                 <img src="./img/banner_bg.jpg" alt="Фон">
             </picture>
@@ -57,7 +57,7 @@
             <div class="container">
                 <div class="three-col__container">
                     <article class="announce">
-                        <picture class="announce__img">
+                        <picture loading="lazy" class="announce__img">
                             <source srcset="./img/announce_1.webp" type="image/webp">
                             <img src="./img/announce_1.jpg" alt="Анонс">
                         </picture>
@@ -66,7 +66,7 @@
                         </div>
                     </article>
                     <article class="announce">
-                        <picture class="announce__img">
+                        <picture loading="lazy" class="announce__img">
                             <source srcset="./img/announce_2.webp" type="image/webp">
                             <img src="./img/announce_2.jpg" alt="Анонс">
                         </picture>
@@ -75,7 +75,7 @@
                         </div>
                     </article>
                     <article class="announce">
-                        <picture class="announce__img">
+                        <picture loading="lazy" class="announce__img">
                             <source srcset="./img/announce_3.webp" type="image/webp">
                             <img src="./img/announce_3.jpg" alt="Анонс">
                         </picture>
@@ -100,7 +100,7 @@
                 </div>
                 <div class="tests__wrap">
                     <div class="test">
-                        <picture class="test__img">
+                        <picture loading="lazy" class="test__img">
                             <source srcset="./img/test_1.webp" type="image/webp">
                             <img src="./img/test_1.png" alt="Линейка современных процесоров">
                         </picture>
@@ -117,7 +117,7 @@
                         <a href="#" class="button button_navy">К тестированию</a>
                     </div>
                     <div class="test">
-                        <picture class="test__img">
+                        <picture loading="lazy" class="test__img">
                             <source srcset="./img/test_2.webp" type="image/webp">
                             <img src="./img/test_2.webp" alt="Линейка современных процесоров">
                         </picture>
@@ -143,7 +143,7 @@
                 <div class="deco__big deco_grey"></div>
                 <div class="deco__small deco_light"></div>
             </div>
-            <picture class="horizons__bg">
+            <picture loading="lazy" class="horizons__bg">
                 <source srcset="./img/horizons_bg.webp" type="image/webp">
                 <img src="./img/horizons_bg.jpg" alt="Фон">
             </picture>
@@ -162,7 +162,7 @@
             <div class="container">
                 <div class="three-col__container">
                     <article class="article">
-                        <picture class="article__img">
+                        <picture loading="lazy" class="article__img">
                             <source srcset="./img/article_1.webp" type="image/webp">
                             <img src="./img/article_1.jpg" alt="Фото статьи">
                         </picture>
@@ -172,7 +172,7 @@
                         </div>
                     </article>
                     <article class="article">
-                        <picture class="article__img">
+                        <picture loading="lazy" class="article__img">
                             <source srcset="./img/article_2.webp" type="image/webp">
                             <img src="./img/article_2.jpg" alt="Фото статьи">
                         </picture>
@@ -182,7 +182,7 @@
                         </div>
                     </article>
                     <article class="article">
-                        <picture class="article__img">
+                        <picture loading="lazy" class="article__img">
                             <source srcset="./img/article_3.webp" type="image/webp">
                             <img src="./img/article_3.jpg" alt="Фото статьи">
                         </picture>
@@ -198,7 +198,7 @@
             </div>
         </section>
         <section class="small">
-            <picture class="small__bg">
+            <picture loading="lazy" class="small__bg">
                 <source srcset="./img/small_1.webp" type="image/webp">
                 <img src="./img/small_1.jpg" alt="Фон">
             </picture>
@@ -216,7 +216,7 @@
             <div class="container">
                 <div class="products__wrap">
                     <article class="product">
-                        <picture class="product__img">
+                        <picture loading="lazy" class="product__img">
                             <source srcset="./img/product_1.webp" type="image/webp">
                             <img src="./img/product_1.jpg" alt="Процессор">
                         </picture>
@@ -234,7 +234,7 @@
                         </div>
                     </article>
                     <article class="product">
-                        <picture class="product__img">
+                        <picture loading="lazy" class="product__img">
                             <source srcset="./img/product_2.webp" type="image/webp">
                             <img src="./img/product_2.jpg" alt="Процессор">
                         </picture>
@@ -252,7 +252,7 @@
                         </div>
                     </article>
                     <article class="product">
-                        <picture class="product__img">
+                        <picture loading="lazy" class="product__img">
                             <source srcset="./img/product_3.webp" type="image/webp">
                             <img src="./img/product_3.jpg" alt="Процессор">
                         </picture>
@@ -276,7 +276,7 @@
             </div>
         </section>
         <section class="small">
-            <picture class="small__bg">
+            <picture loading="lazy" class="small__bg">
                 <source srcset="./img/small_2.webp" type="image/webp">
                 <img src="./img/small_2.jpg" alt="Фон">
             </picture>
@@ -302,7 +302,7 @@
             <div class="container">
                 <div class="about__wrap">
                     <article class="about__item">
-                        <picture class="about__big-img">
+                        <picture loading="lazy" class="about__big-img">
                             <source srcset="./img/about_1.webp" type="image/webp">
                             <img src="./img/about_1.jpg" alt="Фото о нас">
                         </picture>
@@ -319,7 +319,7 @@
                     </article>
                     <article class="about__item">
                         <h3 class="about__title">Концепция</h3>
-                        <picture class="about__img">
+                        <picture loading="lazy" class="about__img">
                             <source srcset="./img/about_2.webp" type="image/webp">
                             <img src="./img/about_2.jpg" alt="Фото о нас">
                         </picture>
@@ -329,7 +329,7 @@
                     </article>
                     <article class="about__item">
                         <h3 class="about__title">Миссия</h3>
-                        <picture class="about__img">
+                        <picture loading="lazy" class="about__img">
                             <source srcset="./img/about_3.webp" type="image/webp">
                             <img src="./img/about_3.jpg" alt="Фото о нас">
                         </picture>
